name:           prefix-containers
version:        0.0
synopsis:       Containers holding sequences of keys, which support efficient lookup by prefix.
homepage:       http://github.com/sykora/prefix-containers/

author:         P.C. Shyamshankar <sykora@lucentbeing.com>
maintainer:     P.C. Shyamshankar <sykora@lucentbeing.com>
copyright:      © P.C. Shyamshankar

license:        GPL-3
license-file:   LICENSE

category:       Data Structures
build-type:     Simple
cabal-version:  >= 1.12

library
    default-language: Haskell2010
